infrastructure/configs/storage/rustfs/base/network/cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: rustfs-allow-rules
  namespace: rustfs
spec:
  description: "App-specific isolation for rustfs"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rustfs
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "1:6H20|"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: rustfs-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
